--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "5.3.0",
     "cors": "2.8.5",
     "cross-env": "7.0.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "mongoose": "5.10.7",
     "react": "^16.13.1",
@@ -26,7 +27,7 @@
   "proxy": "http://localhost:5000",
   "scripts": {
     "build": "node ./buildScript",
-    "start-server": "cross-env NODE_ENV=development nodemon server/server.js --watch server/*",
+    "start-server": "cross-env NODE_ENV=development node server/server.js --watch server/*",
     "start-front": "react-scripts start",
     "build-front": "react-scripts build",
     "test": "react-scripts test",
