--- a/package.json
+++ b/package.json
@@ -24,15 +24,11 @@
     "react-scripts": "3.4.3",
     "uuid": "^8.3.0"
   },
-  "proxy": "http://localhost:5000",
   "scripts": {
-    "build": "node ./buildScript",
-    "start-server": "cross-env NODE_ENV=development node server/server.js --watch server/*",
-    "start-front": "react-scripts start",
-    "build-front": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "concurrently \"npm run start-server\" \"npm run start-front\" --kill-others"
+    "start": "node server/server.js"
   },
   "engines": {
     "node": "12.16.1"
