--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "concurrently": "5.3.0",
-    "cors": "2.8.5",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "mongoose": "5.10.7",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "6.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
